Fixed align

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -169,3 +169,8 @@ nav a {
 	border:none !important;
 	font-size:16px;
 }
+
+.forgot {
+	display: block;
+	text-align:center;
+}
